tests/algorithms/x/C/data_structures/hashing/hash_table_with_linked_list.c
// Generated by Mochi 0.10.32 on 2025-08-24 16:06 +0000
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <unistd.h>
#include <malloc.h>
#include <math.h>

size_t prepend_len;

size_t append_len;
static char* str_int(long long v) {
    char buf[32];
    snprintf(buf, sizeof(buf), "%lld", v);
    return strdup(buf);
}

static char* str_float(double v) {
    char buf[64];
    snprintf(buf, sizeof(buf), "%f", v);
    char *p = buf + strlen(buf) - 1;
    while (p > buf && *p == '0') *p-- = '\0';
    if (p > buf && *p == '.') *p = '\0';
    return strdup(buf);
}

static char* str_list_int(const long long *arr, size_t len) {
    size_t cap = len * 32 + 2;
    char *buf = malloc(cap);
    size_t pos = 0;
    buf[pos++] = '[';
    for (size_t i = 0; i < len; i++) {
        char tmp[32];
        snprintf(tmp, sizeof(tmp), "%lld", arr[i]);
        size_t n = strlen(tmp);
        if (pos + n + 2 >= cap) { cap = cap * 2 + n + 2; buf = realloc(buf, cap); }
        memcpy(buf + pos, tmp, n);
        pos += n;
        if (i + 1 < len) buf[pos++] = ' ';
    }
    buf[pos++] = ']';
    buf[pos] = 0;
    return buf;
}

static char* str_list_list_int(long long **arr, size_t len, const size_t lens[]) {
    size_t cap = 2;
    for (size_t i = 0; i < len; i++) cap += lens[i] * 32 + 3;
    char *buf = malloc(cap);
    size_t pos = 0;
    buf[pos++] = '[';
    for (size_t i = 0; i < len; i++) {
        char *inner = str_list_int(arr[i], lens[i]);
        size_t n = strlen(inner);
        if (pos + n + 2 >= cap) { cap = cap * 2 + n + 2; buf = realloc(buf, cap); }
        memcpy(buf + pos, inner, n);
        pos += n;
        free(inner);
        if (i + 1 < len) buf[pos++] = ' ';
    }
    buf[pos++] = ']';
    buf[pos] = 0;
    return buf;
}

typedef struct { int *keys; void **vals; size_t *lens; size_t len; size_t cap; } MapIL;

static void* map_get_il(const int keys[], void *vals[], const size_t lens[], size_t len, int key, size_t *out_len) {
    for (size_t i = 0; i < len; i++) {
        if (keys[i] == key) { if (out_len) *out_len = lens[i]; return vals[i]; }
    }
    if (out_len) *out_len = 0;
    return NULL;
}

static void map_set_il(int **keys, void ***vals, size_t **lens, size_t *len, size_t *cap, int key, void *val, size_t val_len) {
    for (size_t i = 0; i < *len; i++) {
        if ((*keys)[i] == key) { (*vals)[i] = val; (*lens)[i] = val_len; return; }
    }
    if (*len >= *cap) {
        *cap = *cap ? *cap * 2 : 16;
        *keys = realloc(*keys, *cap * sizeof(int));
        *vals = realloc(*vals, *cap * sizeof(void*));
        *lens = realloc(*lens, *cap * sizeof(size_t));
    }
    (*keys)[*len] = key; (*vals)[*len] = val; (*lens)[*len] = val_len; (*len)++;
}

static long long** list_append_intptr(long long **arr, size_t *len, long long *val) {
    arr = realloc(arr, (*len + 1) * sizeof(long long*));
    arr[*len] = val;
    (*len)++;
    return arr;
}

static size_t* list_append_szt(size_t *arr, size_t *len, size_t val) {
    arr = realloc(arr, (*len + 1) * sizeof(size_t));
    arr[*len] = val;
    (*len)++;
    return arr;
}

#include <time.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    long long size = 0, rss = 0;
    FILE *f = fopen("/proc/self/statm", "r");
    if (f) {
        if (fscanf(f, "%lld %lld", &size, &rss) != 2) rss = 0;
        fclose(f);
    }
    return rss * (long long)sysconf(_SC_PAGESIZE);
}

static void panic(const char *msg) {
    fputs(msg, stderr);
    fputc('\n', stderr);
    exit(1);
}

typedef struct HashTableWithLinkedList HashTableWithLinkedList;

struct HashTableWithLinkedList {
    long long size_table;
    long long charge_factor;
    long long **values;
    size_t values_len;
    size_t *values_lens;
    size_t values_lens_len;
    MapIL keys;
};

static long long* list_append_long_long(long long *arr, size_t *len, long long val) {
    arr = realloc(arr, (*len + 1) * sizeof(long long));
    arr[*len] = val;
    (*len)++;
    return arr;
}

HashTableWithLinkedList make_table(long long size_table, long long charge_factor);
long long hash_function(HashTableWithLinkedList ht, long long key);
long long * prepend(long long * lst, size_t lst_len, long long value);
void set_value(HashTableWithLinkedList* ht, long long key, long long data);
long long count_empty(HashTableWithLinkedList ht);
double balanced_factor(HashTableWithLinkedList ht);
long long collision_resolution(HashTableWithLinkedList ht, long long key);
void insert(HashTableWithLinkedList ht, long long data);
void user_main();
int main(void);

HashTableWithLinkedList make_table(long long size_table, long long charge_factor) {
    long long **vals = NULL;
    size_t vals_len = 0;
    size_t *vals_lens = NULL;
    size_t vals_lens_len = 0;
    long long i = 0LL;
    while (i < size_table) {
        vals = list_append_intptr(vals, &vals_len, ({long long* tmp = malloc(0 * sizeof(long long)); tmp;}));
        vals_lens = list_append_szt(vals_lens, &vals_lens_len, 0);
        i = i + 1LL;
    }
    return (HashTableWithLinkedList){.size_table = size_table, .charge_factor = charge_factor, .values = vals, .values_len = vals_len, .values_lens = vals_lens, .values_lens_len = vals_len, .keys = (MapIL){0}};
}

long long hash_function(HashTableWithLinkedList ht, long long key) {
    long long res = key % ht.size_table;
    if (res < 0LL) {
        res = res + ht.size_table;
    }
    return res;
}

long long * prepend(long long * lst, size_t lst_len, long long value) {
    long long *result = NULL;
    size_t result_len = 0;
    result = list_append_long_long(result, &result_len, value);
    long long i = 0LL;
    while (i < lst_len) {
        result = list_append_long_long(result, &result_len, lst[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? lst_len + _mochi_idx : _mochi_idx;})]);
        i = i + 1LL;
    }
    return prepend_len = result_len, result;
}

void set_value(HashTableWithLinkedList* ht, long long key, long long data) {
    long long *current = ht->values[(int)({long long _mochi_idx = key; _mochi_idx < 0 ? ht->values_len + _mochi_idx : _mochi_idx;})];
    size_t current_len = ht.values_lens[key];
    long long *updated = prepend(current, current_len, data);
    size_t updated_len = prepend_len;
    long long **vals = ht->values;
    size_t vals_len = ht->values_len;
    size_t *vals_lens = ht->values_lens;
    size_t vals_lens_len = ht->values_len;
    vals[(int)(key)] = updated;
    ht->values = vals;
    ht->values_len = vals_len;
    MapIL ks = ht->keys;
    map_set_il(&ks.keys, &ks.vals, &ks.lens, &ks.len, &ks.cap, key, updated, updated_len);
    ht->keys = ks;
}

long long count_empty(HashTableWithLinkedList ht) {
    long long count_ = 0LL;
    long long i = 0LL;
    while (i < ht.values_len) {
        if (ht.values_lens[i] == 0LL) {
            count_ = count_ + 1LL;
        }
        i = i + 1LL;
    }
    return count_;
}

double balanced_factor(HashTableWithLinkedList ht) {
    long long total = 0LL;
    long long i = 0LL;
    while (i < ht.values_len) {
        total = total + (ht.charge_factor - ht.values_lens[i]);
        i = i + 1LL;
    }
    return ((double)(total) / (double)(ht.size_table)) * (double)(ht.charge_factor);
}

long long collision_resolution(HashTableWithLinkedList ht, long long key) {
    if (!((ht.values_lens[key] == ht.charge_factor) && (count_empty(ht) == 0LL))) {
        return key;
    }
    long long new_key = (key + 1LL) % ht.size_table;
    long long steps = 0LL;
    while ((ht.values_lens[new_key] == ht.charge_factor) && (steps < (ht.size_table - 1LL))) {
        new_key = (new_key + 1LL) % ht.size_table;
        steps = steps + 1LL;
    }
    if (ht.values_lens[new_key] < ht.charge_factor) {
        return new_key;
    }
    return -1LL;
}

void insert(HashTableWithLinkedList ht, long long data) {
    long long key = hash_function(ht, data);
    if ((ht.values_lens[key] == 0LL) || (ht.values_lens[key] < ht.charge_factor)) {
        set_value(&ht, key, data);
        return;
    }
    long long dest = collision_resolution(ht, key);
    if (dest >= 0LL) {
        set_value(&ht, dest, data);
    } else {
        puts("table full");
    }
}

void user_main() {
    HashTableWithLinkedList ht = make_table(3LL, 2LL);
    insert(ht, 10LL);
    insert(ht, 20LL);
    insert(ht, 30LL);
    insert(ht, 40LL);
    insert(ht, 50LL);
    puts(str_list_list_int(ht.values, ht.values_len, ht.values_lens));
    puts(str_float(balanced_factor(ht)));
}

int main(void) {
    {
        long long __start = _now();
        user_main();
        long long __end = _now();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = _mem();
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
